--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop is-close is-open ">
         <div class="modal">
           <button type="button" class="modal-btn">
             <svg class="modal-btn-icon" width="8" height="8">
