--- a/index.html
+++ b/index.html
@@ -384,20 +384,16 @@
             </div>
         </section>
     </main>
-
-    <footer class="footer">
+    <footer>
         <div class="container footer-container">
-
             <div class="footer-logo-p">
                 <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                     & growth solutions.</p>
             </div>
-
             <div class="footer-icon-container">
                 <p class="footer-icon-text">Social media</p>
                 <ul class="footer-list-icon">
-
                     <li class="footer-item-icon">
                         <a class="footer-link-icon" href="https://www.instagram.com/" target="_blank">
                             <svg class="our-team-item-icon" width="24" height="24">
@@ -405,7 +401,6 @@
                             </svg>
                         </a>
                     </li>
-
                     <li class="footer-item-icon">
                         <a class="footer-link-icon" href="https://twitter.com/" target="_blank">
                             <svg class="our-team-item-icon" width="24" height="24">
@@ -433,8 +428,7 @@
             </div>
         </div>
     </footer>
-
-    <div class="backdrop is-close is-open ">
+    <div class="backdrop is-open ">
         <div class="modal">
           <button type="button" class="modal-btn">
             <svg class="modal-btn-icon" width="8" height="8">
